# tdengine-mcp

./: Dockerfile  README.md  TOOL_USAGE_EXAMPLES.md  pyproject.toml  requirements.txt  smithery.yaml
.github/workflows/: python-publish.yml
src/tdengine_mcp_server/: .env  .env.example  args.py  prompt.md  server.py
