[project]
name = "tdengine-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "15639936570", email = "lcprunstone@163.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2",
    "mcp[cli]",
    "taospy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
